--- a/templates/helpers/_menu.html.twig
+++ b/templates/helpers/_menu.html.twig
@@ -9,7 +9,7 @@
 
     <a href='{{ item.link }}' {% if item.title is defined %}title='{{ item.title|escape }}'{% endif %}
        class='{{ class }} {% if item.current %}current {% endif %}{% if item.class is defined %}{{item.class}}{% endif %} index-{{ loop.index }}{% if loop.first %} first{% endif %}{% if loop.last %} last{% endif %}'>
-        {% if item.label is defined %}{{ item.label }}{% else %} - {% endif %}
+       {{ item.label|default(item.title) }}
     </a>
 
     {% if item.submenu %}
