--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -28,7 +28,7 @@
         {# Setting the labels and their localisations that are used in the sidebar-menu. #}
         {% set labels = {
             'about.bolt_documentation': 'about.bolt_documentation'|trans,
-            'action.view_site': 'action.view'|trans ~ ' website',
+            'action.view_site': 'action.view'|trans,
             'action.create_new': 'action.create_new'|trans,
             'general.greeting': 'general.greeting'|trans({'%name%': user_display_name}),
             'action.logout': 'action.logout'|trans,
