Allow textarea `height` option

--- a/templates/_partials/fields/textarea.html.twig
+++ b/templates/_partials/fields/textarea.html.twig
@@ -10,5 +10,6 @@
         :errormessage='{{ errormessage|json_encode }}'
         :pattern='{{ pattern|json_encode }}'
         :placeholder='{{ placeholder|json_encode }}'
+        :height='{{ field.definition.height|json_encode }}'
     ></editor-textarea>
 {% endblock %}
