--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -72,7 +72,7 @@
     <!-- Admin Sidebar -->
     {% set labels = {
         'toggler': 'admin_sidebar.toggler'|trans,
-        'action.create_new': 'action.create_new'|trans,
+        'action.new': 'action.new'|trans,
         'action.view': 'action.view'|trans,
     }|json_encode %}
     <div class="admin__sidebar">
